--- a/autosage-frontend/package.json
+++ b/autosage-frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
